--- a/AsteroidGame_2020/Properties/Resources.resx
+++ b/AsteroidGame_2020/Properties/Resources.resx
@@ -121,4 +121,7 @@
   <data name="Asteroid" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Ast.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="FirstAidKit" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\FirstAidKit.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
